--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html>
 
-  {%- include head.html -%}
+  {% include head.html %}
 
   <body>
 
-    {%- include header.html -%}
+    {% include header.html %}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
 
-    {%- include footer.html -%}
+    {{ content }}
+
+    {% include footer.html %}
 
   </body>
 
